--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 /* header */
 
 .page_header {
+    position: relative;
     fill: #E8E8E8;
     width: 100%;
     background: #222222;
@@ -24,7 +25,7 @@
 
 .page_header_container {
 
-    min-width: 1600px;
+    max-width: 1600px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -88,6 +89,184 @@
 }
 
 /* === end page-header-search-form === */
+
+/* menu */
+.menu-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    /* border: 1px solid #fff; */
+}
+
+.menu-btn:hover span,
+.menu-btn:hover span::before,
+.menu-btn:hover span::after {
+    background-color: orange;
+}
+
+.menu-btn:active span,
+.menu-btn:active span::before,
+.menu-btn:active span::after {
+    background-color: red;
+}
+
+.menu-btn span {
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    position: relative;
+}
+
+.menu-btn span::before,
+.menu-btn span::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    top: -10px;
+    left: 0;
+}
+
+.menu-btn span::after {
+    top: 10px;
+}
+
+#menu-switch {
+    display: none;
+}
+
+#menu-switch:checked~.menu-list {
+    display: block;
+}
+
+#menu-switch:checked~.page-header-banner {
+    border: 8px solid red;
+}
+
+/* ======================= */
+
+.menu-list {
+    display: none;
+    width: 232px;
+    min-height: 764px;
+    /* значение в свойстве min-height удобно задать через переменную равную высоте второго блока */
+    padding: 16px 33px;
+    box-sizing: border-box;
+    background-color: #fff;
+    list-style: none;
+
+    position: absolute;
+    top: 75px;
+    /* значение в свойстве top удобно задать через переменную равную высоте первого блока */
+    right: 0;
+    z-index: 20;
+}
+
+.menu-list-close-btn {
+    display: block;
+    width: 12px;
+    height: 12px;
+    margin: 0;
+    padding: 0;
+    /* border: 1px solid black; */
+    position: relative;
+    top: 0;
+    left: 170px;
+}
+
+.menu-list-close-btn::before,
+.menu-list-close-btn::after {
+    content: "";
+    display: block;
+    width: 18px;
+    height: 2px;
+    background: #6F6E6E;
+    border-radius: 10px;
+    position: absolute;
+    top: 5px;
+    left: -3px;
+    transform: rotate(45deg);
+}
+
+.menu-list-close-btn::after {
+    transform: rotate(-45deg)
+}
+
+.menu-list-close-btn:hover::before,
+.menu-list-close-btn:hover::after {
+    background: #B7B6B6;
+}
+
+.menu-list-close-btn:active::before,
+.menu-list-close-btn:active::after {
+    background: #535353;
+}
+
+.menu-list-title {
+    display: block;
+    margin: 9px 0 24px 0;
+    font-weight: bold;
+    color: #000000;
+    text-transform: uppercase;
+}
+
+.menu-title>a,
+.menu-list-item>a,
+.menu-sublist-item>a {
+    font-style: normal;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: normal;
+}
+
+.menu-list-item>a {
+    display: block;
+    margin: 0 0 11px 0;
+    color: #F16D7F;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.menu-list-item:hover>a {
+    color: #9889D7;
+}
+
+.menu-list-item:active>a {
+    color: #9D2334;
+}
+
+.menu-sublist {
+    padding: 0 0 0 21.5px;
+    box-sizing: border-box;
+    list-style: none;
+}
+
+.menu-sublist-item>a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0 0 11px 0;
+    color: #6F6E6E;
+}
+
+.menu-sublist-item a {
+    text-decoration: none;
+}
+
+.menu-sublist-item:hover a {
+    text-decoration: underline;
+}
+
+.menu-sublist-item:active a {
+    text-decoration: none;
+}
+
+/* end menu */
 .menu {}
 
 .menu_btn {
@@ -119,8 +298,7 @@
     height: 3px;
     background-color: #fff;
     position: relative;
-    margin-top: px;
-    margin-left: 0px;
+        margin-left: 0px;
 }
 
 .menu_btn_item::before,
@@ -154,7 +332,7 @@
 
 .accesories {
     height: 180px;
-    background-image: url(/img/accesories.png);
+    background-image: url(../img/accesories.png);
     background-repeat: no-repeat;
     margin-bottom: 96px;
     display: flex;
@@ -232,6 +410,7 @@
 /* brand */
 
 .brand {
+
     height: 764px;
     background: #F1E4E6;
     display: flex;
@@ -328,23 +507,23 @@
 
 .categories_item:nth-child(1) {
     background-image: linear-gradient(rgba(33, 22, 22, 0.7), rgba(33, 22, 22, 0.7)),
-        url(/img/card1.png);
+        url(../img/card1.png);
 }
 
 .categories_item:nth-child(2) {
     background-image: linear-gradient(rgba(33, 22, 22, 0.7), rgba(33, 22, 22, 0.7)),
-        url(/img/card2.png);
+        url(../img/card2.png);
 }
 
 .categories_item:nth-child(3) {
     background-image: linear-gradient(rgba(33, 22, 22, 0.7), rgba(33, 22, 22, 0.7)),
-        url(/img/card3.png);
+        url(../img/card3.png);
 }
 
 .categories_item:last-child {
     width: 100%;
     background-image: linear-gradient(rgba(33, 22, 22, 0.7), rgba(33, 22, 22, 0.7)),
-        url(/img/accesories.png);
+        url(../img/accesories.png);
 }
 
 .categories_item:nth-child(4n-1),
@@ -363,7 +542,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 19, 2px;
+    line-height: 19px, 2px;
     text-align: center;
     color: #FFFFFF;
 }
@@ -374,7 +553,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
-    line-height: 28, 8px;
+    line-height: 28px, 8px;
     text-align: center;
     color: #F16D7F;
 }
@@ -577,6 +756,48 @@
     filter: brightness(50%);
 }
 
+.pagination {
+    /* border: 1px solid black; */
+    /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
+    width: 284px;
+    height: 44px;
+    margin-top: 47px;
+    margin-bottom: 96px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ul_pagination {
+
+    margin: 0 4px 0 12px;
+    padding: 0;
+    display: inline;
+    list-style-type: none;
+
+}
+
+.ul_pagination_num {
+    color: #C4C4C4;
+}
+
+.ul_pagination_num_1 {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+
+    color: #EF5B70;
+
+}
+
+.ul_pagination_num:hover {
+    color: #EF5B70;
+
+}
+
+.ul_pagination_svg {
+    margin: 0 0 0 0;
+}
 
 /* end of products part */
 
@@ -620,7 +841,7 @@
 .footer_top {
     max-width: 1600px;
     height: 448px;
-    background-image: url(/img/photo_subscribe.png);
+    background-image: url(../img/photo_subscribe.png);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -730,3 +951,402 @@
 
 
 /* end of footer part*/
+
+/* catalog page */
+.new_arrivals_marg {
+    margin-bottom: 0px;
+}
+
+.new_arrivals {
+    height: 148px;
+    background-color: #F8F3F4;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.new_arrivals_header {
+    font-size: 24px;
+    line-height: 29px;
+    color: #F16D7F;
+}
+
+.breadcrumbs_li {
+    display: inline;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-decoration: none;
+    color: #636363;
+}
+
+.slesh::before {
+    content: "/";
+    margin: 5px;
+}
+
+.slesh::after {
+    content: "/";
+    margin: 5px;
+}
+
+.breadcrumbs_li:hover {
+    color: #F16D7F;
+    font-weight: bold;
+}
+
+.breadcrumbs_li_checked {
+    color: #F16D7F;
+    font-weight: bold;
+}
+
+/* filters*/
+.filter_bar {
+    display: flex;
+    margin-bottom: 45px;
+    margin-top: 51px;
+}
+
+/* end filters*/
+.filter {
+    position: absolute;
+    z-index: 1;
+    text-transform: uppercase;
+    list-style-type: none;
+    width: 360px;
+    /* height: 30px; */
+    padding: 13px 16px 16px 16px;
+    box-sizing: border-box;
+    background: #FFFFFF;
+
+}
+
+#switch_filter {
+    display: none;
+}
+
+#switch_filter:checked~.filter_list {
+    display: block;
+}
+
+.filter_list_item:before {
+    content: "";
+    display: block;
+    width: 5px;
+    height: 37px;
+    background-color: #EF5B70;
+    position: absolute;
+    left: 27px;
+    top: -7px;
+
+}
+
+.filter_btn:hover {
+    color: #F16D7F;
+}
+
+.filter_btn:hover .filter_svg {
+    fill: #F16D7F;
+}
+
+.filter_list_item {
+    list-style-type: none;
+    border-bottom: 1px solid #EBEBEB;
+    padding-bottom: 11px;
+
+}
+
+a {
+    text-decoration: none;
+}
+
+.filter_list {
+    display: none;
+    list-style: none;
+
+    list-style-type: none;
+    position: relative;
+}
+
+.filter_sublist_item_a {
+    font-size: 14px;
+    line-height: 17px;
+    color: #EF5B70;
+}
+
+.filter_sublist_item {
+    list-style-type: none;
+    text-transform: capitalize;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+    margin-bottom: 11px;
+}
+
+.filter_btn {
+    display: block;
+    width: 100%;
+    margin: 0 0 16px 0;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    color: #000000;
+    text-align: left;
+
+}
+
+/* other rilters*/
+.other_filters {
+    display: flex;
+    padding: 20px 0px 0px 0px;
+    box-sizing: border-box;
+}
+
+.list_size_margin {
+    margin-left: 65px;
+
+}
+
+.list_size_margin_price {
+    margin-left: px;
+}
+
+/* input:focus,
+button:focus {
+    outline: none;
+}
+
+input:focus_visible,
+button:focus_visible {
+    outline: 2px solid #F16D7F;
+} */
+
+.list_size {
+    display: block;
+    width: 80px;
+    border: none;
+    background-color: transparent;
+
+}
+
+.list_size_wrp_display {
+    display: none;
+}
+
+.list_size_btn_title {
+    display: block;
+    width: 80px;
+    margin: 0 0 0 0;
+    padding: 0;
+    border: none;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16.8px;
+    color: #6F6E6E;
+    background-color: transparent;
+    text-align: left;
+    text-transform: uppercase;
+    position: relative;
+}
+
+.svg_trend {
+    fill: #6F6E6E;
+    position: absolute;
+    top: 40%;
+    left: 60%;
+}
+
+.list_size_btn_title svg {
+    fill: #6F6E6E;
+    position: absolute;
+    top: 40%;
+    left: 60%;
+}
+
+.list_size_btn_title_trd {
+    display: block;
+    width: 200px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16.8px;
+    color: #6F6E6E;
+    background-color: transparent;
+    text-align: left;
+    text-transform: uppercase;
+    position: relative;
+}
+
+.list_size_btn_title:hover {
+    color: #F16D7F;
+}
+
+.list_size_btn_title:hover svg {
+    fill: currentColor;
+}
+
+.list_size_btn_title:active {
+    color: black;
+}
+
+.list_size_btn_title:active svg {
+    fill: currentColor;
+}
+
+#switch {
+    display: none;
+}
+
+#switch:checked~.list_size_wrp {
+    display: flex;
+}
+
+.list_size_wrp {
+    position: absolute;
+    z-index: 1;
+    display: none;
+    flex-direction: column;
+    margin: 5px 0 0 0;
+    padding: 9.5px 9.5px 9.5px 31px;
+    box-sizing: border-box;
+    background-color: #fff;
+}
+
+.list_size_item_title:before {
+    content: "";
+    display: block;
+    width: 12px;
+    height: 12px;
+    border: 1px solid #EBEBEB;
+}
+
+.list_size_item {
+    display: none;
+}
+
+.list_size_item:nth_child(1):checked~.list_size_item_title:nth_child(2):before,
+.list_size_item:nth_child(3):checked~.list_size_item_title:nth_child(4):before,
+.list_size_item:nth_child(5):checked~.list_size_item_title:nth_child(6):before,
+.list_size_item:nth_child(7):checked~.list_size_item_title:nth_child(8):before {
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Green_tick.svg/600px-Green_tick.svg.png');
+    background-size: cover;
+    background-position: center;
+}
+
+.list_size_item_title {
+    display: block;
+    margin: 0 0 6px 0;
+    position: relative;
+    text-transform: uppercase;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16.41px;
+    color: #6F6E6E;
+}
+
+.list_size_item_title:before {
+    content: "";
+    display: block;
+    width: 12px;
+    height: 12px;
+    border: 1px solid #EBEBEB;
+    position: absolute;
+    top: 1px;
+    left: -23.5px;
+}
+
+.filter_sublist_item_marg {
+    margin: 0 0 24px 0px;
+}
+
+.filter_list_item_brand {
+    position: relative;
+    padding-bottom: 11px;
+    margin-bottom: 24px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.filter_list_item_brand::before {
+    content: "";
+    display: block;
+    width: 5px;
+    height: 37px;
+    background-color: #EF5B70;
+    position: absolute;
+    left: -13px;
+    top: -7px;
+
+}
+
+.filter_sublist {
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+}
+
+.filter_list_item {
+    margin: 0 0 24px 0px;
+}
+
+/* end catalog page */
+
+/* product */
+
+/* product */
+
+.slider {
+    height: 777px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #F7F7F7;
+    /* margin-bottom: 664px; */
+
+}
+
+.slider_switch_left {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 47px;
+    height: 47px;
+    background-color: #D8D8D8;
+}
+
+.slider_switch_right {
+    margin: 0;
+    left: 1600px;
+    width: 47px;
+    height: 47px;
+    background-color: #D8D8D8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider_switch_left_svg {
+    fill: black;
+}
+
+.women_collection {
+    width: 1141px;
+    height: 601px;
+    border: 1px solid #EAEAEA;
+    background-color: white;
+
+    top: 927px;
+    left: 915px;
+}
+.products_margin {
+    margin-bottom: 128px;
+    margin-top: 128px;
+}
